[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
minifb = { version = "0.25.0", optional = true }
rand = "0.8.5"
window_rs = {git = "https://github.com/NoodleSamaChan/window_rs", rev = "6068419"}
graphic = {git = "https://github.com/NoodleSamaChan/graphic.git", rev = "4cf1ea4", default-features = false}

[features]
default = ["graphic/minifb", "dep:minifb"]


[dev-dependencies]
proptest = "1.4.0"
insta = "1.36.1"
